--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-16 16:49:20
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-16 18:30:23
+* @Last Modified time: 2021-01-17 02:07:20
 */
 .section-gallery {
     display: flex;
@@ -39,6 +39,7 @@
         height: 100vh;
         width: 100vw;
         background-color: rgba(0, 0, 0, .8);
+        z-index: 999;
 
         img {
             height: 60%;
